--- a/K5style.css
+++ b/K5style.css
@@ -10,7 +10,7 @@ header{
     height:150px;
     width:150px;
     clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
-    color:red;
+    background-color:red;
     position:relative;
 }
  #star2{
@@ -18,5 +18,5 @@ header{
      height:100px;
      width:100px;
      clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
-     color:black;
+     background-color:black;
  }
